--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,10 @@
 <body>
 
 <div id="TPTC"></div>
+<div id="MaxIdValue"></div>
 <button type="button" onclick="test()">Расчет</button>
 <button type="button" onclick="tes()">Пиздос</button>
+<button type="button" onclick="maxId()">Пиздос</button>
 </body>
 
 </html>
