--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,11 +8,17 @@
 </head>
 <body>
 
-<div id="TPTC"></div>
-<div id="MaxIdValue"></div>
-<button type="button" onclick="test()">Расчет</button>
-<button type="button" onclick="tes()">Пиздос</button>
-<button type="button" onclick="maxId()">Пиздос</button>
+<div id="OnePerson"></div>
+
+<button type="button" onclick="getOnePerson()">Одно ебало</button>
+<br>
+<p>
+<button type="button" onclick="createPeople()">Создать кучу ебал</button>
+<br>
+<p>
+<button type="button" onclick="getAllFromDB()">Выгрузить все ебала</button>
+<div id="Result"></div>
+
 </body>
 
 </html>
