--- a/src/main/resources/templates/TestPage.html
+++ b/src/main/resources/templates/TestPage.html
@@ -14,7 +14,7 @@
 <br>
 <div id = "onchangeTest"></div>
 <input id="phone_id" >
-<button type="button" onclick="updateTest()"> ебал</button>
+<button type="button" onclick="UpdateEntity()"> ебал</button>
 
 </body>
 </html>
